--- a/Front-End/web/index.html
+++ b/Front-End/web/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>seyoni</title>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmWvi-uH6aO03-dINcyv9DglMLl3k4JSw"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmWvi-uH6aO03-dINcyv9DglMLl3k4JSw&libraries=drawing"></script>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
